texture preview not loaded #32707

Closed
opened 2012-09-30 16:17:40 +02:00 by Daniel Grauer · 3 comments
Member

%%%build: r49666
os: windows 7

when loading a texture in blender and going to texture paint mode, the texture preview is not loaded unless the texture is selected. (see attached picture)

how to reproduce:

  1. crate a new texture
  2. change type to image or movie
  3. open any picture
  4. switch to texture paint mode
  5. open the tool shelf and navigate to the texture tab.
  6. click on the image to browse linked images so the preview window pops up.
  7. notice that there is no preview, only the texture name below a empty square.
  8. click on the texture and open the preview window again.
  9. now the texture preview is working.... this should have happened in step 6 already%%%
%%%build: r49666 os: windows 7 when loading a texture in blender and going to texture paint mode, the texture preview is not loaded unless the texture is selected. (see attached picture) how to reproduce: 1. crate a new texture 2. change type to image or movie 3. open any picture 4. switch to texture paint mode 5. open the tool shelf and navigate to the texture tab. 6. click on the image to browse linked images so the preview window pops up. 7. notice that there is no preview, only the texture name below a empty square. 8. click on the texture and open the preview window again. 9. now the texture preview is working.... this should have happened in step 6 already%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev51074. Thanks for the report, closing.%%%

%%%Fixed in svn rev51074. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32707
No description provided.