Fix #32707: texture preview not loaded